syntax = "proto3";

package mantrae.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "mantrae/v1/router.proto";

service ServiceService {
  rpc GetService(GetServiceRequest) returns (GetServiceResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse);
  rpc UpdateService(UpdateServiceRequest) returns (UpdateServiceResponse);
  rpc DeleteService(DeleteServiceRequest) returns (DeleteServiceResponse);
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc GetServiceByRouter(GetServiceByRouterRequest) returns (GetServiceByRouterResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

enum ServiceType {
  SERVICE_TYPE_UNSPECIFIED = 0;
  SERVICE_TYPE_HTTP = 1;
  SERVICE_TYPE_TCP = 2;
  SERVICE_TYPE_UDP = 3;
}

message Service {
  int64 id = 1;
  int64 profile_id = 2;
  string agent_id = 3;
  string name = 4;
  google.protobuf.Struct config = 5;
  ServiceType type = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetServiceRequest {
  int64 id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gt = 0
  ];
  ServiceType type = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum.defined_only = true
  ];
}
message GetServiceResponse {
  Service service = 1;
}

message CreateServiceRequest {
  int64 profile_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gt = 0
  ];
  string agent_id = 2;
  string name = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1
  ];
  google.protobuf.Struct config = 4;
  ServiceType type = 5 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum.defined_only = true
  ];
}
message CreateServiceResponse {
  Service service = 1;
}

message UpdateServiceRequest {
  int64 id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gt = 0
  ];
  string name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1
  ];
  google.protobuf.Struct config = 3;
  ServiceType type = 4 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum.defined_only = true
  ];
}
message UpdateServiceResponse {
  Service service = 1;
}

message DeleteServiceRequest {
  int64 id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gt = 0
  ];
  ServiceType type = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum.defined_only = true
  ];
}
message DeleteServiceResponse {}

message ListServicesRequest {
  int64 profile_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gt = 0
  ];
  optional string agent_id = 2 [(buf.validate.field).string.min_len = 1];
  optional ServiceType type = 3 [(buf.validate.field).enum.defined_only = true];
  optional int64 limit = 4 [(buf.validate.field).cel = {
    id: "limit.valid"
    message: "limit must be either -1 or greater than 0"
    expression: "this == -1 || this > 0"
  }];
  optional int64 offset = 5 [(buf.validate.field).int64.gte = 0];
}
message ListServicesResponse {
  repeated Service services = 1;
  int64 total_count = 2;
}

message GetServiceByRouterRequest {
  string name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1
  ];
  RouterType type = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum.defined_only = true
  ];
}
message GetServiceByRouterResponse {
  Service service = 1;
}
